refactor: Improve Rounds class structure with enhanced indexing and documentation for better clarity and performance